# PosnetNative

./: CMakeLists.txt  PosnetNative.def  PosnetNative_cdecl.def  Posnet_x64.def  README.md  build_all.bat  manifest.xml
build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PosnetNative.sln  PosnetNative.slnx  PosnetNative.vcxproj  PosnetNative.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x64/PosnetNative.dir/Release/: Posnet_x64.dll.recipe
build_x64/PosnetNative.dir/Release/PosnetNative.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/Release/: Posnet_x64.exp
build_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PosnetNative.sln  PosnetNative.slnx  PosnetNative.vcxproj  PosnetNative.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x86/PosnetNative.dir/Release/: Posnet_x86.dll.recipe
build_x86/PosnetNative.dir/Release/PosnetNative.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  PosnetNative.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+2 more)
build_x86/Release/: Posnet_x86.exp  Posnet_x86.lib
include/: AddInDefBase.h  ComponentBase.h  IMemoryManager.h  PosnetPrinter.h  com.h  types.h
src/: .gitignore  AddInNative.cpp  PosnetPrinter.cpp  final_check.cpp  posnet_crc.cpp  posnet_crc.h  posnet_protocol.cpp  posnet_protocol.h  test_main.cpp
(+15 files in other folders)
